<resources>
    <string name="app_name">Unit Convertor</string>
    <string-array name="unit_types">
        <item>Foot</item>
        <item>Inch</item>
        <item>Centimetre</item>
        <item>Metre</item>
        <item>Yard</item>

    </string-array>
    <string name="enter_value">Enter Value</string>
    <string name="convert">Convert</string>
    <string name="answer">Answer</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="settingDescription">Press for theme options</string>
    <string name="theme_dark">SWITCH TO DARK</string>
    <string name="theme_light">SWITCH TO LIGHT</string>

</resources>