<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/unitConverter"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/from"
        android:layout_marginTop="10dp"
/>
        <Spinner
        android:id="@+id/fromUnitSpinner"
        android:layout_width="320dp"

        android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:entries="@array/unit_types"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
        />

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/to"
        android:layout_marginTop="40dp"
        />

    <Spinner
        android:id="@+id/toUnitSpinner"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:entries="@array/unit_types"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />
    
    <EditText
        android:id="@+id/inputText"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:autofillHints="autofillHints"
        android:hint="@string/enter_value"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="numberDecimal"
        />
    
    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:layout_gravity="center"
        android:textColor="@color/white"

        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/gray"

        />

    <TextView
        android:id="@+id/answer"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:padding="16dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"/>


</LinearLayout>
